# eink-display-server

./: .dockerignore  .gitignore  README.md  TODO.md  dev  manage.py  pyproject.toml  requirements.txt
dashboard/: admin.py  apps.py  color_constants.py  constants.py  image_processing_declaration.py  server_types.py  urls.py
dashboard/context-templates/: choose-art-style.md  image-artstyle-applicator.md  image-classifier.md
dashboard/daemon/: display_discovery.py  jobs.py  stats.py  time_util.py
dashboard/image_processing_pipeline/: __init__.py  generate_art.py  misc.py  pipeline_registry.py  quantise.py  quantize.py
dashboard/jobs/: __init__.py  calendar.py  classify.py  dummy_job.py  generate_dashboard.py  generate_variant.py  generate_variants.py  get_weather.py  image_processing_declaration.py  job_registry.py  run_test_pipeline.py
dashboard/migrations/: 0001_initial.py  0002_variant_generation_context.py
dashboard/models/: __init__.py  app_settings.py  application.py  art.py  calendar.py  job.py  photos.py  schedule.py
dashboard/services/: app_settings.py  classify_image.py  display.py  docker_health.py  generate_art.py  get_calendar.py  get_weather.py  image_processing.py  logger_job.py  openai.py  openai_prompting.py  render_page.py  scoring.py  select_art_style.py  select_image.py
eink-display-server/: asgi.py  settings.py  urls.py  wsgi.py
pihome/: settings.py
tools/: start-fresh.sh
tools/development/: Dockerfile  docker-compose.yml  example.env.dev  frash-start.sh  pyproject.toml  run-local.sh  start.sh  wait-for-postgres.sh
(+75 files in other folders)
